1.14 -> 1.15:
    - ldv: update INPUT tag in Doxyfile.in, fix doxygen warnings in popthelp.c.
    - start popt-1.15 development.

1.13 -> 1.14:
    - release popt-1.14.
    - jbj: remove findme.c, add poptint.c, to po/POTFILES.in.
    - jbj: use stpcpy 2 more places (Wayne Davison<wayned@samba.org>).
    - jbj: add @LTLIBICONV@ when needed (Stanislav Brabec<sbrabec@suse.cz>).
    - jbj: fix: remove the "echo --" Fedorable hack-a-round.
    - rsc: updated de.po (not from the Translation Project).
    - jbj: study the mess with splint. Sigh, splint is so easily confused ...
    - jbj: rewrite findProgramPath & move to popt.c. Nuke the findme.{c,h} toys.
    - jbj: use stpcpy several more places (Wayne Davison<wayned@samba.org>).
    - jbj: enable equal after short option (Wayne Davison<wayned@samba.org>).
    - jbj: permit "#define POPT_fprintf fprintf" to lose the malloc'ing fprintf.
    - jbj: use vasprintf(3) when available (Wayne Davison<wayned@samba.org>).
    - jbj: study the mess with splint, remove annotations where possible.
    - jbj: add -D_GNU_SOURCE for gcc to use __builtin_stpcpy when available.
    - jbj: add static inline stpcpy for the deprived.
    - jbj: use stpcpy to eliminate sprintf calls everywhere but popthelp.c
    - jbj: remove (now unneeded afaik) va_copy() from POPT_fprintf().
    - jbj: inline strdup_fprintf() => POPT_fprintf keeping (unneeded?) va_copy.
    - rse: fix memcpy(3) based va_copy(3) fallbacks
    - jbj: fix: short option with "foo=bar" argument was mishandled.
	(Wayne Davison<wayned@samba.org>).
    - jbj: rename _ABS to avoid collisions, define DBL_EPSILON if not present
	(Wayne Davison<wayned@samba.org>).
    - jbj: test for <glob.h>, disable reading directory poptrc files if not.
    - jbj: add __attribute__(__unused__) (Wayne Davison<wayned@samba.org>).
    - jbj: permit equal after short option (Wayne Davison<wayned@samba.org>).
    - jbj: make sure that short options are printed only once with --usage.